# university-petri-nets

./: .codecov.yml  .deepsource.toml  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.devcontainer/: devcontainer.json
.devcontainer/backend_devcontainer/: devcontainer.json
.devcontainer/frontend_devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-docs.yml  codeql-analysis.yml  coverage.yml  pre-commit.yml  ruff.yml
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  models.py  pyproject.toml  requirements.txt  server.py
backend/compositional_algorithm/: __init__.py  compositional_algorithm.py  split_miner.py
backend/compositional_algorithm/algorithm_utils/: filter_logs.py
backend/compositional_algorithm/combine_nets/: __init__.py  combine_nets.py
backend/compositional_algorithm/conformance_checking/: README.md  eval_matrics.py
backend/compositional_algorithm/interface_patterns/: interface_patterns.py
backend/compositional_algorithm/split_miner/: __init__.py  split_miner.py
backend/compositional_algorithm/transformations/: README.md  transformations.py
backend/conformance_checking/: entropy_conformance.py  eval_matrics.py
backend/data_catalog/: README.md
backend/data_catalog/colliery_validation/: README.md
backend/data_catalog/colliery_validation/artificial1/: PartyA.xes  PartyC.xes  collaboration_discovered_alpha.bpmn  collaboration_discovered_alphaplus.bpmn  collaboration_discovered_splitminer.bpmn  collectivelog.xes  model.bpmn  petrinet_of_collaboration_discovered_alpha.pnml  petrinet_of_collaboration_discovered_heuristics.pnml
backend/data_catalog/colliery_validation/artificial2/: PartyA.xes  PartyB.xes  collaboration_discovered_alpha.bpmn  collaboration_discovered_alphaplus.bpmn  collaboration_discovered_heuristics.bpmn  collaboration_discovered_inductive.bpmn  collaboration_discovered_splitminer.bpmn  model.bpmn  petrinet_of_collaboration_discovered_alpha.pnml  (+4 more)
backend/data_catalog/final_logs/: A2_collectivelog.xes  A3_collectivelog.xes  README.md
backend/data_catalog/temp_files/: temp_net.pnml
backend/data_preparation/: README.md  __init__.py  interface_pattern_cleanup.py
backend/entropy_conformance/: README.md  entropy_conformance.py
backend/notebooks/: algorithm_introduction.ipynb  algorithm_test.ipynb  algorithm_tests.ipynb  artificial1_discovery.ipynb  data_cleaning.ipynb  entropy_test.py  interface_patterns.ipynb  ip1_discovery.ipynb  ip2_discovery.ipynb  load_data_example.ipynb  pm4py_introduction.ipynb
backend/old/: combine_nets.py  compositional_algorithm copy2.py  compositional_algorithm copy3.py  compositional_algorithm copy4.py  compositional_algorithm copy5.py  compositional_algorithm copy6.py  compositional_algorithm copy7.py  compositional_algorithm copy8.py  compositional_algorithm.py  interface_patterns copy2.py  interface_patterns.py  transformations copy3.py  transformations copy4.py  transformations.py
compositional_algorithm/: algorithm_introduction.ipynb  compositional_algorithm.py  filter_logs.py
data_catalog/: README.md
data_catalog/IP-11/: IP-11_ref_model.pnml
data_catalog/event-logs-cleanup_2024-09-05_0920/: ip_cleanup.py
data_handler/: __init__.py  load_data.ipynb
docs/: mails.md
examples/: __init__.py  introduction.ipynb  load_data_example.ipynb  load_true_data_example.ipynb  paper_introduction.ipynb
frontend/: Dockerfile  README.md  eslint.config.js  index.html  interface_patterns.py  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: AlertComponent.jsx  ConformanceComponent.jsx  InputComponent.jsx  VisualizationComponent copy.jsx  VisualizationComponent.jsx  VisualizationComponent2.jsx
frontend/src/converter/: DotStringConverter.jsx
frontend/src/pages/: HomePage.jsx
frontend/src/providers/: AlertProvider.jsx
interface_patterns/: README.md  interface_patterns.py  interfaces.py
mails/: index.html
notebooks/: algorithm_introduction.ipynb  load_data_example.ipynb
search/: search_index.json
tests/: __init__.py  test_template.py
university_petri_nets/: compositional_algorithm.py  eval_matrics.py  filter_logs.py  shortcuts.py
university_petri_nets/compositional_algorithm/: README.md  compositional_algorithm.py
university_petri_nets/compositional_algorithm/algorithm_utils/: filter_logs.py
university_petri_nets/compositional_algorithm/interface_patterns/: interface_patterns.py
university_petri_nets/compositional_algorithm/transformations/: README.md  transformations.py
university_petri_nets/conformance_checking/: README.md  __init__.py  eval_matrics.py
(+126 files in other folders)
